# llama-cpp-d

./: .gitignore  LICENSE  README.md  dub.json
.github/workflows/: ci.yml
common_shims/: CMakeLists.txt
examples/: chat.d  dub.json  embedding.d  multimodal.d  save-load-state.d  simple.d  tokenize.d
source/c/: common_shims.cpp  common_shims.h  common_stubs.c  ggml_alloc_stubs.c  ggml_backend_stubs.c  ggml_cpu_stubs.c  ggml_opt_stubs.c  ggml_stubs.c  gguf_stubs.c  llama_stubs.c  mtmd_stubs.c
source/llama/: adapter.d  backend.d  batch.d  chat.d  common_ext.d  config.d  ctx.d  ggml.d  ggml_alloc.d  ggml_backend.d  ggml_cpu.d  ggml_opt.d  gguf.d  llama.d  llama_cpp.d  logging.d  model.d  mtmd.d  opt.d  owned.d  package.d  rag.d  sampling.d  vocab.d
tests/: test_bindings.d
tools/: dub.json  hf_download.d
